--- a/task1.3.ipynb
+++ b/task1.3.ipynb
@@ -29,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python Programming! I mean, seriously, amazing achievement!\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Welcome to Python Programming!')"
+    "print('Welcome to Python Programming! I mean, seriously, amazing achievement!')"
    ]
   },
   {
@@ -64,15 +72,8 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "**<a id=\"#\">Task 1.3.4.</a>** Markdown is not only about plain boring text. It is a very simple and widely used hypertext language which allows text formatting. Make yourself a little familiar with the Markdown syntax by [clicking here](https://www.markdownguide.org/basic-syntax/).\n",
-    "\n",
-    "**<a id=\"#\">Task 1.3.5.</a>** Double-click on your previously created Markdown cell above to enter its editing mode. Change the text, experiment with the Markdown language. For example, add some words, make words bold-typed, etc. You can also embed a YouTube video."
+    "The job was done"
    ]
   },
   {
@@ -96,6 +97,26 @@
     "5. Move the cell to some other place in the notebook.\n",
     "\n",
     "**<a id=\"#\">Task 1.3.7.</a>** Return to your assignment sheet when you feel like you have gotten an idea of how notebooks work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3"
    ]
   }
  ],
