--- a/task3.ipynb
+++ b/task3.ipynb
@@ -425,11 +425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Schwarzer Rand'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Schwarzer Rand"
+    "\"Schwarzer Rand\""
    ]
   },
   {
